--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "express-session": "^1.17.2",
     "mongoose": "^5.12.15",
     "passport": "^0.4.1",
-    "passport-local": "^1.0.0"
+    "passport-local": "^1.0.0",
+    "typescript": "^4.3.4"
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.2",
@@ -33,7 +34,7 @@
     "@types/passport": "^1.0.6",
     "@types/passport-local": "^1.0.33",
     "ts-node": "^10.0.0",
-    "tsc": "^2.0.3",
-    "typescript": "^4.3.4"
+    "tsc": "^2.0.3"
+    
   }
 }
