--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "start": "node ./build/dist/index.js",
     "heroku-prebuild": "npm install",
+    "build": "tsc -p .",
     "dev": "ts-node src/index.ts"
   },
   "keywords": [],
@@ -21,7 +22,8 @@
     "mongoose": "^5.12.15",
     "passport": "^0.4.1",
     "passport-local": "^1.0.0",
-    "typescript": "^4.3.4"
+    "typescript": "^4.3.4",
+    "tsc": "^2.0.3"
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.2",
@@ -32,8 +34,8 @@
     "@types/mongoose": "^5.11.97",
     "@types/passport": "^1.0.6",
     "@types/passport-local": "^1.0.33",
-    "ts-node": "^10.0.0",
-    "tsc": "^2.0.3"
+    "ts-node": "^10.0.0"
+
     
   }
 }
