--- a/package.json
+++ b/package.json
@@ -22,7 +22,6 @@
     "mongoose": "^5.12.15",
     "passport": "^0.4.1",
     "passport-local": "^1.0.0",
-    "typescript": "^4.3.4",
     "tsc": "^2.0.3"
   },
   "devDependencies": {
@@ -34,8 +33,7 @@
     "@types/mongoose": "^5.11.97",
     "@types/passport": "^1.0.6",
     "@types/passport-local": "^1.0.33",
-    "ts-node": "^10.0.0"
-
-    
+    "ts-node": "^10.0.0",
+    "typescript": "^4.3.4"
   }
 }
